--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="Develop/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -30,13 +30,11 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="row time-block" id="hour9">
+      <div class="row time-block" id="9">
         <div class="col-md-1 hour">
           9 AM
         </div>
-        <textarea class="col-md-10 description">
-
-        </textarea>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1>"><i class="fas fa-save saveBtn"></i></button>
       </div>
     </div>
